<resources>
    <string name="app_name">Convert</string>
    <string name="hint">Enter your number</string>
    <string name="genarate">Genarate</string>
    <string name="header">Unit Conversion</string>
    <string name="meter">Meter</string>
    <string name="to">TO</string>
    <string name="answer_hint">YOUR ANSWER WILL BE PRINT HERE</string>
    <string name="error">Oops something went wrong!</string>
    <string name="liter">LITER</string>

    <string-array name="units_meter">

        <item>KM</item>
        <item>HM</item>
        <item>DM</item>
        <item>M</item>
        <item>DCM</item>
        <item>CM</item>
        <item>MM</item>

    </string-array>
    <string-array name="units_liter">

        <item>KL</item>
        <item>HL</item>
        <item>DL</item>
        <item>L</item>
        <item>DCL</item>
        <item>CL</item>
        <item>ML</item>

    </string-array>

</resources>
